# estufa

./: CMakeLists.txt  Instrucoes.txt  README.md  sdkconfig.defaults
components/Componente_LAB01_Sensores/: CMakeLists.txt  Componente_LAB01_Sensores.c
components/Componente_LAB01_Sensores/include/: Componente_LAB01_Sensores.h
components/Componente_Rele/: CMakeLists.txt  Componente_Rele.c
components/Componente_Rele/include/: Componente_Rele.h
components/RMemoria_NVS/: CMakeLists.txt  RMemoria_NVS.c
main/: CMakeLists.txt  Estufa_Rogerio1.c  Kconfig.projbuild  Pinos_Franzininho_LAB01.h  RMemoria_NVS.c  RMemoria_NVS.h  RMenus.c  main.c
