idf_component_register(SRCS "Componente_LAB01_Sensores.c"
                    INCLUDE_DIRS "."
                    INCLUDE_DIRS "include"
                    REQUIRES "driver"
                    PRIV_INCLUDE_DIRS "../dht" "C:/Espressif/frameworks/esp-idf-v5.4.1/components/esp_adc"
                    )
